# index.js
@@ -5,6 +5,7 @@ const YAML = require("yamljs");
 const authRouter = require("./routes/auth");
 const animalsRouter = require("./routes/animals");
 const rateLimit = require("express-rate-limit");
+const applicationsRouter = require("./routes/applications");
 
 const limiter = rateLimit({
   windowMs: 15 * 60 * 1000,
@@ -24,6 +25,7 @@ app.use(express.json());
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/api/auth", authRouter);
 app.use("/api/animals", animalsRouter);
+app.use("/api/applications", applicationsRouter);
 
 app.get("/", (req, res) => {
   res.send('Pet Shelter API is running... <a href="/api-docs">Docs</a>');
